# bencode-parser

./: .pre-commit-config.yaml  README.md  pyproject.toml
bencode_parser/: decoders.py  encoders.py  parsers.py
tests/: conftest.py  test_decode_encode.py  test_decoders.py  test_encoders.py  test_parsers.py
