[tool.poetry]
name = "bencode-parser"
version = "0.1.0"
description = ""
authors = ["a <a>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.1.1"
ruff = "^0.2.0"
mypy = "^1.8.0"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
